--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+_examples/*.c linguist-vendored
+_examples/*.h linguist-vendored
